--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
+    "counter": "^0.1.1",
+    "pure": "^2.85.0",
+    "swiper": "^9.4.0",
     "vue": "^3.3.4"
   },
   "devDependencies": {
