--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
     "counter": "^0.1.1",
+    "icons": "^1.0.0",
     "pure": "^2.85.0",
     "swiper": "^9.4.0",
-    "vue": "^3.3.4"
+    "vue": "^3.3.4",
+    "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
