--- a/package.json
+++ b/package.json
@@ -8,27 +8,20 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-free": "^5.15.4",
-    "awesome": "^0.0.7",
     "bootstrap": "^5.3.0",
     "bootstrap-icons": "^1.10.5",
     "core-js": "^3.8.3",
-    "counter": "^0.1.1",
-    "font": "^0.0.4",
-    "icons": "^1.0.0",
-    "pure": "^2.85.0",
-    "remixicon": "^3.3.0",
-    "swiper": "^9.4.1",
     "vue": "^3.3.4",
+    "vue-gtag": "^2.0.1",
     "vue-router": "^4.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
     "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "^4.1.2",
+    "@vue/cli-plugin-eslint": "^5.0.8",
     "@vue/cli-service": "^5.0.8",
-    "eslint": "^7.32.0",
+    "eslint": "^7.5.0",
     "eslint-plugin-vue": "^8.0.3"
   },
   "eslintConfig": {
